--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -18,18 +18,16 @@
             android:id="@+id/edit_text_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_name"
             android:drawablePadding="@dimen/drawable_padding"
             android:hint="@string/full_name"
             android:nextFocusDown="@id/edit_text_email"
-            />
+            android:inputType="" />
 
 
         <EditText
             android:id="@+id/edit_text_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_email"
             android:drawablePadding="@dimen/drawable_padding"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
@@ -41,7 +39,6 @@
             android:id="@+id/edit_text_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_password"
             android:drawablePadding="@dimen/drawable_padding"
             android:hint="@string/password"
             android:inputType="text"
