--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:drawablePadding="@dimen/drawable_padding"
             android:hint="@string/password"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:nextFocusDown="@id/edit_text_job" />
 
         <EditText
@@ -59,6 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/register"
+            android:background="@drawable/roundbutton"
             android:textAllCaps="false"
              />
 
